add footer partial

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,5 +13,6 @@
     <%= render 'application/header' %>
     <%= render 'application/notification' %>
     <%= yield %>
+    <%= render 'application/footer' %>
   </body>
 </html>
