--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if user_signed_in? %>
-  <p>Currently logged as: <%= user.email %></p>
+  <p>Currently logged as: <%= current_user.email %></p>
   <%= link_to 'Log out', destroy_user_session_path %>
 <% else %>
   <%= link_to 'Sign up', new_user_registration_path %>
