--- a/app/views/users/confirmations/show.html.erb
+++ b/app/views/users/confirmations/show.html.erb
@@ -9,6 +9,13 @@
       <p><%= f.label :password,'Choose a Password:' %> <%= f.password_field :password %></p>
       <p><%= f.label :password_confirmation,'Password Confirmation:' %> <%= f.password_field :password_confirmation %></p>
     <% end %>
+
+    <%= fields_for :profile do |pf| %>
+      <p><%= pf.label :name, 'Set name:' %> <%= pf.text_field :name %></p>
+      <p><%= pf.label :surname, 'Set surname' %> <%= pf.text_field :surname %></p>
+      <p><%= pf.label :nickname, 'Set nickname' %> <%= pf.text_field :nickname %></p>
+    <% end %>
+
     <%= hidden_field_tag :confirmation_token, @confirmation_token %>
     <p><%= f.submit "Activate" %></p>
   </fieldset>
