Add partial for user

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,3 +1,5 @@
 <% if !user_signed_in? %>
   <%= render 'application/general-header' %>
+<% else %>
+  <%= render 'application/user-header' %>
 <% end %>
