Fixed bug in organization routes.

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Organization "<%= @organization.name %>"</h1>
 <p>Description: </p>
 <p><%= @organization.description %></p>
+<%= link_to 'Join', join_organization_path(@organization), method: :post, class: 'btn btn-md btn-primary' %>
 <%= link_to 'Edit', edit_organization_path(@organization), class: 'btn btn-md btn-warning' if policy(@organization).edit? %>
 <%= link_to 'Back', organizations_path, class: 'btn btn-info btn-md' %>
