--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,6 +1,15 @@
 <h1>Organization "<%= @organization.name %>"</h1>
 <p>Description: </p>
 <p><%= @organization.description %></p>
-<%= link_to 'Join', join_organization_path(@organization), method: :post, class: 'btn btn-md btn-primary' %>
+<% if current_user %>
+  <%= link_to 'Join', join_organization_path(@organization),
+              method: :post,
+              remote: true,
+              id: 'join-organization-button',
+              class: 'btn btn-md btn-primary ' +
+                  (@organization.memberships.find_by(user: current_user) || @organization.join_requests.find_by(user: current_user, status: :pending) ? 'disabled' : '') %>
+<% else %>
+  <p>Log into your account to join this organization.</p>
+<% end %>
 <%= link_to 'Edit', edit_organization_path(@organization), class: 'btn btn-md btn-warning' if policy(@organization).edit? %>
 <%= link_to 'Back', organizations_path, class: 'btn btn-info btn-md' %>
