--- a/app/views/application/_user-header.html.erb
+++ b/app/views/application/_user-header.html.erb
@@ -30,5 +30,19 @@
   <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search" aria-label="Search">
   <i class="fas fa-search" aria-hidden="true"></i>
 </form>
+<ul class="navbar-nav">
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      <%= User.find(session[:ownable_id]).profile.nickname + '(User)' if session[:ownable_type] == 'User' %>
+      <%= Organization.find(session[:ownable_id]).name + '(Organization)' if session[:ownable_type] == 'Organization' %>
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item" href="#"><%= current_user.profile.nickname %>(User)</a>
+      <% current_user.organizations.map do |org| %>
+        <a class="dropdown-item" href="#"><%= org.name %>(Organization)</a>
+      <% end %>
+    </div>
+  </li>
+</ul>
 <%= link_to('Logout', destroy_user_session_path, method: :delete, class: 'btn btn-outline-danger') %>
 </nav>
