Changed application notifications.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <% end %>
 
     <%= render 'application/header' %>
-    <%= render 'application/notification' %>
+    <%= render 'layouts/flash' %>
 
     <%= yield %>
   </body>
