--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -1,15 +1,17 @@
 <% flash.each do |key, value| %>
   <% key = "success" if key == "notice" %>
   <% key = "danger" if key == "alert" %>
-  <div class="alert alert-<%= key %>" role="alert">
-    <button type="button" class="close" data-dismiss="alert">×</button>
+  <div class="alert alert-<%= key %> alert-dismissible fade show" role="alert">
+    <button type="button" class="close" data-dismiss="alert">
+      <span aria-hidden="true">&times;</span>
+    </button>
     <strong><%= value %></strong>
   </div>
   <script>
       $(function() {
           setTimeout(function(){
               $('.alert').slideUp(500);
-          },3000);
+          },8000);
       });
   </script>
 <% end %>
