--- a/app/views/invites/notificate.html.erb
+++ b/app/views/invites/notificate.html.erb
@@ -1,7 +1,7 @@
 <% current_user.invites.each do | invite | %>
   <p>
     <%= invite.organization_name %>
-    <%= link_to 'Yes', accept_invite_path(invite), method: 'post' %>
-    <%= link_to 'No', root_path %>
+    <%= link_to 'Yes', accept_invite_path(invite), method: :post %>
+    <%= link_to 'No', destroy_invite_path(invite), method: :delete %>
   </p>
 <% end %>
