--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
 
   <body>
     <%= render 'application/header' %>
-    <%= render 'layouts/flash' %>
+    <div id="notification-area" class="m-2">
+      <%= render 'layouts/flash' %>
+    </div>
 
     <%= yield %>
 
