Moved join request related actions to JoinRequestsController. Updadet join_button partial and js templates for remote actions. Added option to cancel join request from the organization page.

--- a/app/views/memberships/destroy.js.erb
+++ b/app/views/memberships/destroy.js.erb
@@ -1,4 +1,4 @@
-let leave_button = $('#leave-organization-button')
-leave_button.after($('<%= j render partial: 'organizations/join_button', locals: { organization: @organization } %>'));
+let leave_button = $('#leave-organization-button');
+leave_button.after($('<%= j render partial: 'organizations/join_button', locals: { organization: @organization, join_request: nil } %>'));
 leave_button.remove();
 force_flash('<%= j render "layouts/flash" %>');
