--- a/app/views/join_requests/index.html.erb
+++ b/app/views/join_requests/index.html.erb
@@ -5,8 +5,8 @@
     <div id="join-request-<%= request.id %>">
       <hr/>
       From: <%= request.user.profile.nickname %><br/>
-      <%= link_to 'Accept', accept_request_organization_path(@organization, request), method: :post, remote: :true, class: 'btn btn-md btn-success' %>
-      <%= link_to 'Decline', decline_request_organization_path(@organization, request), method: :delete, remote: :true, class: 'btn btn-md btn-danger' %>
+      <%= link_to 'Accept', accept_request_organization_path(@organization, request), method: :put, remote: :true, class: 'btn btn-md btn-success' %>
+      <%= link_to 'Decline', decline_request_organization_path(@organization, request), method: :put, remote: :true, class: 'btn btn-md btn-danger' %>
       <hr/>
     </div>
   <% end %>
