--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -5,6 +5,9 @@
   <%= f.input :name, label: 'Course name', required: true, input_html: { autocomplete: 'name' } %>
   <%= f.input :duration, label: 'Course duration', required: true, input_html: { min: '0' } %>
   <%= f.input :difficulty, label: 'Difficulty', collection: Course.difficulties.keys, include_blank: false %>
+  <label>Set creator to organization</label>
+  <%= check_box_tag 'is_org_creator', true %>
+  <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true, input_html: {class: 'd-none'} %>
 
   <div class="form-actions">
     <%= f.button :submit, 'Create new course', class: 'btn btn-md btn-success' %>
