--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -7,7 +7,10 @@
   <%= f.input :difficulty, label: 'Difficulty', collection: Course.difficulties.keys, include_blank: false %>
   <label>Set creator to organization</label>
   <%= check_box_tag 'is_org_creator', true %>
-  <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true, input_html: {class: 'd-none'} %>
+  <div class='course_owner_div d-none'>
+    <label>Select organization</label>
+    <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true %>
+  </div>
 
   <div class="form-actions">
     <%= f.button :submit, 'Create new course', class: 'btn btn-md btn-success' %>
