--- a/app/views/invites/index.html.erb
+++ b/app/views/invites/index.html.erb
@@ -1,6 +1,6 @@
 <% current_user.invites.each do | invite | %>
   <p>
-    <%= invite.organization_name %>
+    <%= invite.organization.name %>
     <%= link_to 'Yes', accept_invite_path(invite), method: :post %>
     <%= link_to 'No', destroy_invite_path(invite),  remote: true, method: :delete %>
   </p>
