Fixed footer positioning. Changed user dashboard index view.

--- a/app/views/user_dashboard/index.html.erb
+++ b/app/views/user_dashboard/index.html.erb
@@ -11,7 +11,39 @@
     </div>
     <div class="col-lg-10">
       <div class="tab-content" id="v-pills-tabContent">
-        <div class="tab-pane fade show active" id="v-pills-dashboard" role="tabpanel" aria-labelledby="v-pills-dashboard-tab">Dashboard</div>
+        <div class="tab-pane fade show active" id="v-pills-dashboard" role="tabpanel" aria-labelledby="v-pills-dashboard-tab">
+          Dashboard
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                Current courses:
+                <div class="panel-stub"></div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                Organizations courses:
+                <div class="panel-stub"></div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                User-created courses:
+                <div class="panel-stub"></div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                Favourite courses:
+                <div class="panel-stub"></div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                Last completed courses:
+                <div class="panel-stub"></div>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-12">
+                Recommended courses:
+                <div class="panel-stub"></div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">Profile</div>
         <div class="tab-pane fade" id="v-pills-courses" role="tabpanel" aria-labelledby="v-pills-courses-tab">Courses</div>
         <div class="tab-pane fade" id="v-pills-certificates" role="tabpanel" aria-labelledby="v-pills-certificates-tab">Certificates</div>
