--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -4,26 +4,26 @@
       <div class="col-md-6 py-4">
         <div class="mb-10 flex-center">
           <a class="fb-ic">
-            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+            <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-1"></i>
           </a>
           <a class="tw-ic">
-            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+            <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-1"></i>
           </a>
           <a class="gplus-ic">
-            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+            <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-1"></i>
           </a>
           <a class="li-ic">
-            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+            <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-1"></i>
           </a>
           <a class="ins-ic">
-            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"></i>
+            <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-1"></i>
           </a>
           <a class="pin-ic">
-            <i class="fab fa-pinterest fa-lg white-text fa-2x"></i>
+            <i class="fab fa-pinterest fa-lg white-text"></i>
           </a>
         </div>
       </div>
-      <div class="col-md-6 py-4">
+      <div class="col-md-6 pt-4">
         <div class="form-group row">
           <label class="col-sm-2 col-form-label">Language</label>
           <div class="col-sm-4">
