--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,7 +1,7 @@
-<footer class="page-footer font-small cyan darken-3" id="general-footer">
+<footer class="page-footer font-small cyan darken-3 mt-2" id="general-footer">
   <div class="container">
     <div class="row">
-      <div class="col-md-6 py-4">
+      <div class="col-md-6 pt-4">
         <div class="mb-10 flex-center">
           <a class="fb-ic">
             <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-1"></i>
