--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -5,12 +5,14 @@
   <%= f.input :name, label: 'Course name', required: true, input_html: { autocomplete: 'name' } %>
   <%= f.input :duration, label: 'Course duration', required: true, input_html: { min: '0' } %>
   <%= f.input :difficulty, label: 'Difficulty', collection: Course.difficulties.keys, include_blank: false %>
-  <label>Set creator to organization</label>
-  <%= check_box_tag 'is_org_creator', true %>
-  <div class='course_owner_div d-none'>
-    <label>Select organization</label>
-    <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true %>
-  </div>
+  <% if !@organizations.empty? %>
+    <label>Set creator to organization</label>
+    <%= check_box_tag 'is_org_creator', true %>
+    <div class='course_owner_div d-none'>
+      <label>Select organization</label>
+      <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true %>
+    </div>
+  <% end %>
 
   <div class="form-actions">
     <%= f.button :submit, 'Create new course', class: 'btn btn-md btn-success' %>
