--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,13 +1,7 @@
 <div class="container-fluid">
   <div class="row mx-3">
     <div class="col-lg-2">
-      <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist">
-        <a class="nav-link tab-scroll" id="v-pills-dashboard-tab" href="<%= user_dashboard_path %>">Dashboard</a>
-        <a class="nav-link active tab-scroll" id="v-pills-profile-tab" href="<%= profile_path %>">My Profile</a>
-        <a class="nav-link tab-scroll" id="v-pills-courses-tab" href="<%= participations_path %>">My Courses</a>
-        <a class="nav-link tab-scroll" id="v-pills-certificates-tab" href="<%= certificates_path %>">My Certificates</a>
-        <a class="nav-link tab-scroll" id="v-pills-messages-tab" href="#">Private Messages</a>
-      </div>
+      <%= render partial: "user_dashboard/menu", locals: { active: :profile } %>
     </div>
     <div class="col-lg-10">
       <div class="tab-content" id="v-pills-tabContent">
