--- a/app/views/user_dashboard/_menu.html.erb
+++ b/app/views/user_dashboard/_menu.html.erb
@@ -6,5 +6,5 @@
   <a class="nav-link tab-scroll" id="v-pills-messages-tab" href="#">Private Messages</a>
 </div>
 <script>
-  $('#<%= get_id_for_active_menu_item(active) %>').addClass('active');
+  window.set_active_class('<%= get_id_for_active_menu_item(active) %>');
 </script>
