--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -5,6 +5,14 @@
   <%= f.input :name, label: 'Course name', required: true, input_html: { autocomplete: 'name' } %>
   <%= f.input :duration, label: 'Course duration', required: true, input_html: { min: '0' } %>
   <%= f.input :difficulty, label: 'Difficulty', collection: Course.difficulties.keys, include_blank: false %>
+  <div class='course_visibility_org_div d-none'>
+    <%= f.input :visibility, label: 'Visibile for: ', collection: Course.visibilities.keys, 
+                include_blank: false, disabled: true, input_html: { id: 'course_visibility_org' } %>
+  </div>
+  <div class='course_visibility_user_div'>
+    <%= f.input :visibility, label: 'Visibile for: ', collection: Course.visibilities.except('organization').keys, 
+                include_blank: false, input_html: { id: 'course_visibility_user' } %>
+  </div>
   <% unless @organizations.empty? %>
     <label>Set creator to organization</label>
     <%= check_box_tag 'course[is_org_creator]', true, false, id: 'course_is_org_creator' %>
