--- a/app/views/questions/_radio_question.html.erb
+++ b/app/views/questions/_radio_question.html.erb
@@ -1,7 +1,5 @@
 <% form_for @question do |f| %>
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
-  <div class="answers">
-
-  </div>
-  <%= link_to 'add answer' %>
+  <div class="answers"></div>
+  <%= link_to('Add answer', root_path, class: 'btn btn-outline-danger') %>
 <% end %>
