--- a/app/views/questions/_textbox_question.html.erb
+++ b/app/views/questions/_textbox_question.html.erb
@@ -1,7 +1,8 @@
 <% form_for @question do |f| %>
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
   <div class="answers">
-
+    <% fields_for :answers do |ans| %>
+      <p><%= ans.label :answer_text,'Write the answer:' %> <%= ans.text_field :answer_text %></p>
+    <% end %>
   </div>
-  <%= link_to 'add answer' %>
 <% end %>
