added routes and submit buttons

--- a/app/views/questions/_textbox_question.html.erb
+++ b/app/views/questions/_textbox_question.html.erb
@@ -5,4 +5,5 @@
       <p><%= ans.label :answer_text,'Write the answer:' %> <%= ans.text_field :answer_text %></p>
     <% end %>
   </div>
+  <p><%= f.submit "Activate" %></p>
 <% end %>
