--- a/app/views/questions/_checkbox_question.html.erb
+++ b/app/views/questions/_checkbox_question.html.erb
@@ -2,4 +2,5 @@
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
   <div class="answers"></div>
   <%= link_to('Add answer', root_path, class: 'btn btn-outline-danger') %>
+  <p><%= f.submit "Activate" %></p>
 <% end %>
