Course creation updated. courses.coffee, courses/new.html/erb refactored.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,9 @@
-/*
- *= require jquery-ui
- */
+@import "jquery-ui";
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap";
 @import "application/application";
 @import "application/footer";
 @import "user_dashboard";
+@import "select2";
+@import "select2-bootstrap";
