--- a/app/views/questions/_checkbox_question.html.erb
+++ b/app/views/questions/_checkbox_question.html.erb
@@ -1,6 +1,8 @@
-<% form_for @question do |f| %>
+<%= form_for @question do |f| %>
   <p><%= f.label :content, 'Set question:' %> <%= f.text_field :content %></p>
-  <div class="answers"></div>
-  <%= link_to('Add answer', root_path, class: 'btn btn-outline-danger') %>
-  <p><%= f.submit "Activate" %></p>
+  <%= fields_for :answers do |m| %>
+    <div class="answers"></div>
+  <% end %>
+  <p class="btn btn-outline-danger" id="add-answer">Add answer</p>
+  <p><%= f.submit "Save question" %></p>
 <% end %>
