Altered routes for organization dashboard and related resources. Changed actions in MembershipsController. Added OrganizationDashboardController and corresponding views.

--- a/app/views/certificates/index.html.erb
+++ b/app/views/certificates/index.html.erb
@@ -14,7 +14,7 @@
               <% else %>
               <div class="col-md-3">
                 <% @certificates.each do |certificate| %>
-                  <%= render partial: "certificates/certificate-card", locals: { certificate: certificate } %>
+                  <%= render partial: "certificates/card", locals: { certificate: certificate } %>
                 <% end %>
               <% end %>
               </div>
