--- a/app/views/memberships/_card.html.erb
+++ b/app/views/memberships/_card.html.erb
@@ -2,5 +2,5 @@
 <div id="organization-member-<%= membership.id %>" class="my-2">
   <%= profile.name %> <%= profile.surname %> (@<%= profile.nickname %>)
   <a href="#" class="btn btn-md btn-primary">Impersonate</a>
-  <%= link_to "Kick user", destroy_membership_organization_path(@organization, membership), class: 'btn btn-md btn-danger' %>
+  <%= link_to "Kick user", destroy_membership_organization_path(@organization, membership), method: :delete, remote: true, class: 'btn btn-md btn-danger' %>
 </div>
