--- a/app/views/memberships/index.html.erb
+++ b/app/views/memberships/index.html.erb
@@ -1,11 +1,11 @@
 <div class="container-fluid">
   <div class="row mx-3">
     <div class="col-lg-2">
-      <%= render partial: "organization_dashboard/menu", locals: { organization: @organization } %>
+      <%= render partial: "organization_dashboard/menu", locals: { organization: @organization, active: :memberships } %>
     </div>
     <div class="col-lg-10">
       <div class="tab-content" id="v-pills-tabContent">
-        <div class="tab-pane fade show active" id="v-pills-org-dashboard" role="tabpanel" aria-labelledby="v-pills-org-dashboard-tab">
+        <div class="tab-pane fade show active" id="v-pills-org-users" role="tabpanel" aria-labelledby="v-pills-org-users-tab">
           <div class="container-fluid">
             <div class="row">
               <div class="col">
