Fixed a bug in "leave course" user action.

--- a/app/views/participations/destroy.js.erb
+++ b/app/views/participations/destroy.js.erb
@@ -1,3 +1,6 @@
 let participation_record = $('#div-participation-<%= @participation.id %>');
+<% if current_user.participations.empty? %>
+  participation_record.after('<h4>Sorry, no courses found.</h4>');
+<% end %>
 participation_record.remove();
 force_flash('<%= j render partial: "layouts/flash" %>');
