Updated actions index and show in courses.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -3,7 +3,12 @@
 <% @courses.each do |course| %>
   <hr>
   <strong>Name:</strong><%= course.name %><br/>
+  <strong>Description:</strong><%= course.description %><br/>
   <strong>Duration:</strong><%= course.duration %><br/>
   <strong>Difficulty:</strong><%= course.difficulty %><br/>
+  <strong>Visibility:</strong><%= course.visibility %><br/>
+  <strong>Author:</strong>
+  <%= course.owner.instance_of?(User) ? "#{course.owner.profile.name} #{course.owner.profile.surname}" : course.owner.name %>
+  <br/>
   <%= link_to 'More', course_path(course), class: 'btn btn-md btn-primary' %>
 <% end %>
