Splitted JoinRequestsController into two separate controllers: one for organizations and one for users, namespaced the controllers. Changed corresponding routes, added invites and requests tabs to user dashboard.

--- a/app/views/organizations/join_requests/index.html.erb
+++ b/app/views/organizations/join_requests/index.html.erb
@@ -14,7 +14,7 @@
                   <h4>No pending join requests found.</h4>
                 <% else %>
                   <% @join_requests.each do |request| %>
-                    <%= render partial: 'join_requests/card', locals: { request: request } %>
+                    <%= render partial: 'organizations/join_requests/card', locals: { request: request } %>
                   <% end %>
                 <% end %>
               </div>
