--- a/app/views/user_dashboard/_menu.html.erb
+++ b/app/views/user_dashboard/_menu.html.erb
@@ -2,6 +2,8 @@
   <a class="nav-link tab-scroll" id="v-pills-dashboard-tab" href="<%= user_dashboard_path %>">Dashboard</a>
   <a class="nav-link tab-scroll" id="v-pills-profile-tab" href="<%= profile_path %>">My Profile</a>
   <a class="nav-link tab-scroll" id="v-pills-courses-tab" href="<%= participations_path %>">My Courses</a>
+  <a class="nav-link tab-scroll" id="v-pills-requests-tab" href="<%= requests_history_path %>">My Join Requests</a>
+  <a class="nav-link tab-scroll" id="v-pills-invites-tab" href="#">My Invites</a>
   <a class="nav-link tab-scroll" id="v-pills-certificates-tab" href="<%= certificates_path %>">My Certificates</a>
   <a class="nav-link tab-scroll" id="v-pills-messages-tab" href="#">Private Messages</a>
 </div>
