Returned the #destroy action to Organizations::JoinRequestsController. Changed helper method for user dashboard.

--- a/app/views/organizations/_join_button.html.erb
+++ b/app/views/organizations/_join_button.html.erb
@@ -1,5 +1,5 @@
 <% if join_request %>
-  <%= link_to 'Cancel join request', cancel_request_path(join_request),
+  <%= link_to 'Cancel join request', destroy_request_organization_path(organization, join_request),
               method: :delete,
               remote: :true,
               data: { source: "org" },
