--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -9,12 +9,12 @@
   <%= f.input :visibility, label: 'Visibile for: ', collection: Course.visibilities.except('organization').keys, 
                 include_blank: false, input_html: { id: 'course_visibility' } %>
   <div class='course_allowed_users_selector_div d-none'>
-  <%= f.input :allowed_users, label:'Select allowed users', collection: @users, disabled: true,
+    <%= f.input :allowed_users, label:'Select allowed users', collection: @users, disabled: true,
               input_html: { class: 'js-example-basic-multiple', multiple: 'multiple', id: 'course_allowed_users_selector' } %>
   </div>
   <% unless @organizations.empty? %>
     <label>Set creator to organization</label>
-    <%= check_box_tag 'course[is_org_creator]', true, false, id: 'course_is_org_creator' %>
+    <%= check_box_tag 'course[is_org_creator]', value: true, checked: false, id: 'course_is_org_creator' %>
     <div class='course_owner_div d-none'>
       <label>Select organization</label>
       <%= f.input :owner, label: false, collection: @organizations, include_blank: false, disabled: true %>
