Create import emails from csv but not tested. Add gem pry-byebug. Add posibilites add emails in input with commas and space and with only space

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,4 +4,6 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "bootstrap";
+@import "application/application";
 @import "application/footer";
+@import "user_dashboard";
