--- a/app/assets/stylesheets/application/footer.scss
+++ b/app/assets/stylesheets/application/footer.scss
@@ -1,6 +1,5 @@
 #general-footer {
-  background-color: #f7f9fa;
-  position: absolute;
-  bottom: 0;
+  background-color: #f8f9fa;
+  border-top: #d5d6d7 1px solid;
   width: 100%;
 }
