--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,16 +8,25 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= yield :dashboard_panel_resizer %>
   </head>
 
   <body>
-    <%= render 'application/header' %>
-    <div id="notification-area" class="m-2">
-      <%= render 'layouts/flash' %>
+    <div id="container">
+      <div id="header">
+        <%= render 'application/header' %>
+      </div>
+      <div id="body">
+        <div id="notification-area" class="m-2">
+          <%= render 'layouts/flash' %>
+        </div>
+        <%= yield %>
+      </div>
+
+      <div id="footer">
+        <%= render 'application/footer' %>
+      </div>
     </div>
 
-    <%= yield %>
-
-    <%= render 'application/footer' %>
   </body>
 </html>
